--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>🌐 DỊCH VĂN BẢN ĐA NGÔN NGỮ</h1>
-            <p class="subtitle">Đề tài 5</p>
+            <p class="subtitle">Đề tài 5 - Hoàn toàn miễn phí - Không cần đăng ký</p>
         </header>
 
         <div class="translation-box">
@@ -73,7 +73,7 @@
             <ul>
                 <li>✅ Dịch tự động khi nhập</li>
                 <li>✅ Hỗ trợ đa ngôn ngữ</li>
-                <li>✅ Phát hiện ngôn ngữ</li>
+                <li>✅ Hoàn toàn miễn phí</li>
                 <li>✅ Không cần đăng ký</li>
                 <li>✅ Đếm ký tự</li>
             </ul>
@@ -87,4 +87,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
