--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>🌐 DỊCH VĂN BẢN ĐA NGÔN NGỮ</h1>
-            <p class="subtitle">Đề tài 5 - Hoàn toàn miễn phí - Không cần đăng ký</p>
+            <p class="subtitle">Đề tài 5 - đang thử nghiệm </p>
         </header>
 
         <div class="translation-box">
@@ -46,7 +46,7 @@
                     <label for="translationMethod">⚙️ Phương thức dịch:</label>
                     <select id="translationMethod">
                         <option value="google-free">Google Free</option>
-                        <option value="libre">LibreTranslate</option>
+                        <option value="libre">VitaletTranslate</option>
                     </select>
                 </div>
 
@@ -87,3 +87,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
