--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <label for="translationMethod">⚙️ Phương thức dịch:</label>
                     <select id="translationMethod">
                         <option value="google-free">Google Free</option>
-                        <option value="libre">VitaletTranslate</option>
+                        <option value="vitalets">VitaletTranslate</option> 
                     </select>
                 </div>
 
@@ -87,4 +87,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
