--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                     </select>
                 </div>
 
-                <div class="method-selector">
-                    <label for="translationMethod">⚙️ Phương thức dịch:</label>
-                    <select id="translationMethod">
-                        <option value="google-free">Google Free</option>
-                        <option value="vitalets">VitaletTranslate</option> 
-                    </select>
-                </div>
+               <div class="method-selector">
+    <label for="translationMethod">⚙️ Phương thức dịch:</label>
+    <select id="translationMethod">
+        <option value="google-free">Google Free</option>
+        <option value="mymemory">MyMemory</option> <!-- Đã thay đổi ở đây -->
+    </select>
+</div>
 
                 <button id="translateBtn" class="translate-button">
                     🔄 Dịch Ngay
@@ -87,3 +87,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
