--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>🌐 DỊCH VĂN BẢN ĐA NGÔN NGỮ</h1>
-            <p class="subtitle">Đề tài 5 - đang thử nghiệm </p>
+            <p class="subtitle">Đề tài 5 - đang thử nghiệm x1 </p>
         </header>
 
         <div class="translation-box">
@@ -101,3 +101,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
