--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <label for="targetLanguage">🎯 Ngôn ngữ đích:</label>
                     <select id="targetLanguage">
                         <option value="en">🇺🇸 Tiếng Anh</option>
+                        <option value="en">🇺🇸 Tiếng Việt</option>
                         <option value="fr">🇫🇷 Tiếng Pháp</option>
                         <option value="ja">🇯🇵 Tiếng Nhật</option>
                         <option value="ko">🇰🇷 Tiếng Hàn</option>
@@ -101,3 +102,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
