--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🌐 DỊCH VĂN BẢN ĐA NGÔN NGỮ</h1>
-            <p class="subtitle">Đề tài 5 - đang thử nghiệm x1 </p>
+            <h1>👀 DỊCH VĂN BẢN ĐA NGÔN NGỮ 👀</h1>
+            <p class="subtitle">Đề tài 5 - bản demo </p>
         </header>
 
         <div class="translation-box">
@@ -97,18 +97,18 @@
             <ul>
                 <li>✅ Dịch tự động khi nhập</li>
                 <li>✅ Hỗ trợ đa ngôn ngữ</li>
-                <li>✅ Hoàn toàn miễn phí</li>
+                <li>✅ Phát hiện ngôn ngữ khi nhập </li>
                 <li>✅ Không cần đăng ký</li>
-                <li>✅ Đếm ký tự</li>
             </ul>
         </div>
 
         <footer>
-            <p>💡 <strong>Đề tài 5:</strong> Dịch văn bản đa ngôn ngữ - Phiên bản Free</p>
+            <p>💡 <strong>Đề tài 5:</strong> Form báo cáo học tập</p>
         </footer>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
